Login functionality added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           type="number"
           class="px-5 py-4 rounded-full placeholder:text-base font-medium bg-[#F4F5F7] border-none w-full"
           placeholder="Enter your number"
-          id=""
+          id="phone-number"
         />
       </div>
 
@@ -48,7 +48,7 @@
           type="number"
           class="px-5 py-4 rounded-full placeholder:text-base font-medium capitalize bg-[#F4F5F7] border-none w-full"
           placeholder="Enter 4 digit pin"
-          id=""
+          id="pin-number"
         />
       </div>
       <button
