Feat: Cash Out feature added

--- a/home.html
+++ b/home.html
@@ -178,7 +178,7 @@
             <input
               id="amount"
               type="number"
-              placeholder="Add Amount to withdraw"
+              placeholder="Add Amount to Add"
               class="input w-full bg-[#F4F5F7] rounded-full px-5 py-4"
             />
           </div>
@@ -232,7 +232,7 @@
               >Amount
             </label>
             <input
-              id="amount"
+              id="amount-withdraw"
               type="number"
               placeholder="Add Amount to withdraw"
               class="input w-full bg-[#F4F5F7] rounded-full px-5 py-4"
@@ -246,17 +246,17 @@
               >Pin Number</label
             >
             <input
-              id="pin-number"
+              id="withdraw-pin-number"
               type="number"
               placeholder="Enter 4 digit pin number"
               class="input w-full bg-[#F4F5F7] rounded-full px-5 py-4"
             />
           </div>
           <button
-            id="add-money-btn"
+            id="withdraw-btn"
             class="btn w-full text-lg font-semibold text-white rounded-full capitalize bg-[#0874F2]"
           >
-            add money
+            withdraw money
           </button>
         </form>
       </div>
